header <a> fix color contrast

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -84,7 +84,7 @@
             
             a {
                 font-size: 1.25rem;
-                color: #00ad6a;
+                color: #00804F;
                 font-weight: 700;
                 text-decoration: none;
                 opacity: 0;
@@ -121,7 +121,7 @@
             }
 
             a {
-                color: #00ad6a;
+                color: #00804F;
                 font-weight: 700;
                 text-decoration: none;
 
